# dinolog

./: .gitignore  README.md
.github/workflows/: docker.yml  rust.yml
dinolog_app/: README.md  flutter_launcher_icons.yaml  pubspec.yaml
dinolog_app/lib/: dinolog.dart  main.dart
dinolog_app/lib/view/: theme.dart
dinolog_app/lib/view_model/: api_provider.dart  api_provider.g.dart  auth_provider.dart  auth_provider.g.dart  dio_provider.dart  dio_provider.g.dart  error_ratio_provider.dart  error_ratio_provider.g.dart  http_method_count_provider.dart  http_method_count_provider.g.dart  ip_info_api_provider.dart  ip_info_api_provider.g.dart  ip_infos_provider.dart  (+27 more)
dinolog_app/test/: widget_test.dart
dinolog_app/web/: index.html  manifest.json
dinolog_server/: Cargo.toml  Dockerfile  docker-compose.yml
dinolog_server/db/: schema.sql
dinolog_server/docs/: QUERIES.md
dinolog_server/src/: main.rs
dinolog_server/src/data/: mod.rs
dinolog_server/src/data/dao/: log_entry.rs  mod.rs  user.rs
dinolog_server/src/data/source/: mod.rs
dinolog_server/src/domain/: mod.rs
dinolog_server/src/domain/loader/: mod.rs
dinolog_server/src/domain/models/: mod.rs
dinolog_server/src/domain/parsers/: combined.rs  mod.rs
dinolog_server/src/domain/repositories/: log_repository.rs  mod.rs  user_repository.rs
dinolog_server/src/presentation/handlers/: auth.rs  mod.rs
dinolog_server/src/presentation/handlers/dto/: mod.rs
dinolog_server/src/presentation/middleware/: auth.rs
dinolog_server/src/presentation/router/: mod.rs
dinolog_server/tests/: integration_tests.rs
(+44 files in other folders)
