[package]
name = "dinolog_server"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.12.4"
axum = { version = "0.8.8", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["rt-multi-thread"] }
sea-orm = { version = "1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
] }
chrono = "0.4.45"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["password-hash"] }
tower-http = { version = "0.6", features = ["cors"] }
dotenv = "0.15.0"
